--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
-<app-home-page></app-home-page>
+<!-- <app-home-page></app-home-page>
 <app-about-page></app-about-page>
 <app-contact></app-contact>
-<app-footer></app-footer>
-<!-- <router-outlet></router-outlet> -->
+<app-footer></app-footer> -->
+<router-outlet></router-outlet>
