--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -48,23 +48,23 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <form action="forms" method="post" class="php-email-form">
+                    <form action="forms" method="post" class="php-email-form" #userPost="ngForm" (ngSubmit)="onSubmit(userPost.value)">
                         <div class="row gy-4">
 
                             <div class="col-md-6">
-                                <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+                                <input type="text" name="name" class="form-control" [(ngModel)]="user.name" placeholder="Your Name" required>
                             </div>
 
                             <div class="col-md-6 ">
-                                <input type="email" class="form-control" name="email" placeholder="Your Email" required>
+                                <input type="email" class="form-control" name="email" [(ngModel)]="user.email" placeholder="Your Email" required>
                             </div>
 
                             <div class="col-md-12">
-                                <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+                                <input type="text" class="form-control" name="subject" [(ngModel)]="user.subject" placeholder="Subject" required>
                             </div>
 
                             <div class="col-md-12">
-                                <textarea class="form-control" name="message" rows="6" placeholder="Message"
+                                <textarea class="form-control" name="message" rows="6" [(ngModel)]="user.message" placeholder="Message"
                                     required></textarea>
                             </div>
 
