--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,11 +4,11 @@
 
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto active" href="#home">Home</a></li>
-                <li><a class="nav-link scrollto" href="#about">About</a></li>
-                <li><a class="nav-link scrollto" href="#services">Services</a></li>
-                <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-                <li><a class="nav-link scrollto" href="#team">Team</a></li>
+                <li><a class="nav-link scrollto" routerLink="home" routerLinkActive="active">Home</a></li>
+                <li><a class="nav-link scrollto" routerLink="about" routerLinkActive="active">About</a></li>
+                <li><a class="nav-link scrollto" href="#services" routerLinkActive="active">Services</a></li>
+                <li><a class="nav-link scrollto" href="#portfolio" routerLinkActive="active">Portfolio</a></li>
+                <li><a class="nav-link scrollto" href="#team" routerLinkActive="active">Team</a></li>
                 <li><a href="./">Blog</a></li>
                 <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
                     <ul>
@@ -18,8 +18,8 @@
                         <li><a href="#">Content 4</a></li>
                     </ul>
                 </li>
-                <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-                <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
+                <li><a class="nav-link scrollto" routerLink="contact" routerLinkActive="active">Contact</a></li>
+                <li><a class="getstarted scrollto" href="#about" routerLinkActive="active">Get Started</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
